# finder

./: .gitignore  pyproject.toml
src/: check.py  finder.py  struct.py
tests/: test_finder.py
